hphp/hack/test/typecheck/reactive/byval_collection_as_property2.php
<?hh // strict
<<file: __EnableUnstableFeatures('coeffects_provisional')>>
class A {
  protected darray<string, int> $events = darray[];

  <<__RxShallow>>
  public function eventMutable(?string $event)[rx_shallow]: void {
    if ($event !== null) {
      // ERROR
      $this->events[$event] = 1;
    }
  }
}
